<resources>
    <string name="app_name">Reminders</string>
    <string name="task_name_hint">Task Name</string>
    <string name="create_task_button">Create Task</string>
    <string name="pick_time">Set Time</string>
    <string name="pick_date">Set Date</string>
    <string name="sort">Sort</string>
    <string name="options">Options</string>
    <string name="create">Create</string>
    <string name="due_date">Due Date</string>
    <string name="create_date">Creation Date</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="edit">Edit</string>
    <string name="changeView">Change View</string>
    <string name="detailed_view">Detailed</string>
    <string name="compact_view">Compact</string>
    <string name="set_due_date">Set due date</string>
    <string name="notification">Notification?</string>
    <string name="preference_file_key">com.austinhlee.app1.PREFERENCE_FILE_KEY</string>
    <string name="additional_notes_hint">Additional notes</string>
    <string name="list_default_view_key">com.austinhlee.app1.LIST_DEFAULT_VIEW_KEY</string>
</resources>
